add db add tests
