# pkg/ocp-certificate-api/ocp-certificate-api.pb.validate.go
@@ -209,6 +209,8 @@ func (m *CreateCertificateV1Response) Validate() error {
 		return nil
 	}
 
+	// no validation rules for CertificateId
+
 	return nil
 }
 
@@ -352,6 +354,16 @@ func (m *DescribeCertificateV1Response) Validate() error {
 		return nil
 	}
 
+	if v, ok := interface{}(m.GetCertificate()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return DescribeCertificateV1ResponseValidationError{
+				field:  "Certificate",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
 	return nil
 }
 
@@ -412,12 +424,108 @@ var _ interface {
 	ErrorName() string
 } = DescribeCertificateV1ResponseValidationError{}
 
+// Validate checks the field values on ListCertificateV1Request with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, an error is returned.
+func (m *ListCertificateV1Request) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	if m.GetLimit() <= 0 {
+		return ListCertificateV1RequestValidationError{
+			field:  "Limit",
+			reason: "value must be greater than 0",
+		}
+	}
+
+	if m.GetOffset() <= 0 {
+		return ListCertificateV1RequestValidationError{
+			field:  "Offset",
+			reason: "value must be greater than 0",
+		}
+	}
+
+	return nil
+}
+
+// ListCertificateV1RequestValidationError is the validation error returned by
+// ListCertificateV1Request.Validate if the designated constraints aren't met.
+type ListCertificateV1RequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ListCertificateV1RequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ListCertificateV1RequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ListCertificateV1RequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ListCertificateV1RequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ListCertificateV1RequestValidationError) ErrorName() string {
+	return "ListCertificateV1RequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ListCertificateV1RequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sListCertificateV1Request.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ListCertificateV1RequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ListCertificateV1RequestValidationError{}
+
 // Validate checks the field values on ListCertificateV1Response with the rules
 // defined in the proto definition for this message. If any rules are
 // violated, an error is returned.
 func (m *ListCertificateV1Response) Validate() error {
 	if m == nil {
 		return nil
+	}
+
+	for idx, item := range m.GetCertificates() {
+		_, _ = idx, item
+
+		if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return ListCertificateV1ResponseValidationError{
+					field:  fmt.Sprintf("Certificates[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
 	}
 
 	return nil
@@ -564,6 +672,8 @@ func (m *UpdateCertificateV1Response) Validate() error {
 		return nil
 	}
 
+	// no validation rules for Updated
+
 	return nil
 }
 
@@ -705,6 +815,8 @@ func (m *RemoveCertificateV1Response) Validate() error {
 	if m == nil {
 		return nil
 	}
+
+	// no validation rules for Removed
 
 	return nil
 }
